syntax = "proto3";
option java_multiple_files = true;
package demo.interfaces.grpc;

message Allocation {
    int64 allocationID = 1;
    int64 employeeID = 2;
    int64 projectID = 3;
    fixed64 allocationStartDate = 4;
    fixed64 allocationEndDate = 5;
}


service AllocationService {

    rpc getAllocationByEmployee (Allocation) returns (stream Allocation) {
    }
    
}